-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b140
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8277393 | 8u331 | Fairoz Matte | P4 | Resolved | Fixed | b01 |
LIRGenerator::generate_address contains code to simplify constant index/displacement. Code like the following line uses int which may overflow:
disp += index->as_constant_ptr()->as_jint() << shift;
We should use 64 bit integer variables on 64 bit platforms.
disp += index->as_constant_ptr()->as_jint() << shift;
We should use 64 bit integer variables on 64 bit platforms.
- backported by
-
JDK-8277393 C1: Possible integer overflow in LIRGenerator::generate_address on several platforms
-
- Resolved
-
- links to
-
Review
openjdk/jdk8u-dev/46