8166140: C1: Possible integer overflow in LIRGenerator::generate_address on several platforms

Reviewed-by: kvn